git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@937365 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
 			<img src="local_resources/black-hole.jpeg"/>
 		</div>
 		</section>
+		
+		<!-- Quick Overview -->
+		<section class="slide insterstitial">
+		<h1>Technical Overview</h1>
+		</section>
+
+
+		<section class="slide">
+		<h1>Technical Architecture</h1>
+		<div class="image-cradle">
+			<img src="local_resources/architecture.png" width="800"/>	
+		</div>
+		</section>
 
 		<!-- The Build -->
 		<section class="slide insterstitial">
@@ -102,18 +115,7 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 </pre>
 		</section>
 
-		<!-- Quick Overview -->
-		<section class="slide insterstitial">
-		<h1>Technical Overview</h1>
-		</section>
-
-
-		<section class="slide">
-		<h1>Technical Architecture</h1>
-		<div class="image-cradle">
-			<img src="local_resources/architecture.png" width="800"/>	
-		</div>
-		</section>
+		
 
 		<!-- JS Widget -->
 		<section class="slide insterstitial">
@@ -121,7 +123,7 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		</section>
 
 
-		<section class="slide">
+		<section class="slide narrower">
 		<h1>Escaping the Sandbox</h1>
 		<iframe src="local_resources/timeline/index.html"></iframe>
 		</section>
@@ -152,7 +154,7 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		</ul>
 		</section>
 
-		<section class="slide">
+		<section class="slide narrower">
 		<h1>Why not JQueryUI?</h1>
 		<iframe src="local_resources/drgbl/index.html"></iframe>
 		</section>
@@ -197,6 +199,11 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		<!-- The PAL Application -->
 		<section class="slide insterstitial">
 		<h1>The PAL App</h1>
+		</section>
+		
+		<section class="slide">
+		<h1>The PAL App Structure</h1>
+	    <iframe src="local_resources/phpdocs/index.html"></iframe>
 		</section>
 
 		<section class="slide">
