--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<link rel="stylesheet" href="extensions/hash/deck.hash.css">
 		<link rel="stylesheet" href="extensions/scale/deck.scale.css">
 
+		<!-- Web fonts -->
+		<link href='http://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
+
 		<!-- Style theme. More available in /themes/style/ or create your own. -->
 		<link rel="stylesheet" href="themes/style/web-2.0.css">
 		<link rel="stylesheet" href="themes/style/timeline.css">
