git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@937452 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 		<iframe src="local_resources/timeline/specs/kltimeline.html"></iframe>
 		</section>
 
-		<section class="slide">
+		<section class="slide wider">
 		<h1>PHPUnit Tests</h1>
 		<iframe src="local_resources/phpunit.html"></iframe>
 		</section>
 
-		<section class="slide">
+		<section class="slide wider">
 		<h1>Code coverage</h1>
 		<iframe src="local_resources/coverage/index.html"></iframe>
 		</section>
