fixed some padding issues with interstitial slides
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@937456 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 
 		<!-- The PAL Application -->
 		<section class="slide insterstitial">
-		<h1>Monitoring, Logging, Caching</h1>
+		<h1>Monitoring, Logging &amp; Caching</h1>
 		</section>
 	
 		<section class="slide">
