removed the word technical\!
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@937459 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		
 		<!-- Quick Overview -->
 		<section class="slide insterstitial">
-		<h1>Technical Overview</h1>
+		<h1>Overview</h1>
 		</section>
 
 
