increased levels of suck
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@937476 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<!-- Begin slides. Just make elements with a class of slide. -->
 
 		<section class="slide">
-		<h1>Embedded Timeline</h1>
+		<h1 class="suck">Embedded Timeline</h1>
 		<div class="image-cradle">
 			<img src="local_resources/black-hole.jpeg"/>
 		</div>
