Added link to Zenoss
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938155 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 	
 		<section class="slide">
 		<h1>PAL Monitoring</h2>
+		<iframe src="https://monitor.forge.bbc.co.uk/zport/dmd/Reports/Multi-Graph%20Reports/BBC%20Applications/kltimeline/kltimeline_Int#graph_3:True;"></iframe>
+		<!--
 			<div class="image-cradle">
 				<h2>Zenoss</h2>
 				<img src="local_resources/zenoss.png" width="800"/>	
@@ -225,7 +227,7 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 				<li>...</li>
 			</ul>
 		</div>
-		
+		-->
 		</section>
 
 		<section class="slide">
