removing reference to backbone.js
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938349 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		<section class="slide">
 		<h1>Stuff i've learnt</h1>
 		<ul>
-			<li>Jasmine is awesome.</li>
+			<li><a href="http://pivotal.github.com/jasmine/">Jasmine</a> is awesome.</li>
 			<li>It might have been OK to throw away JQuery.</li>
-			<li>Maybe backbone.js (or some other framework) would have helped.</li>
+			<li>A JavaScript MVC framework might have helped.</li> 
 			<li>CSS3 rendering engines are not to be trusted.</li>
 			<li>Making asynchronous requests between www & static doesn't work. <br/> See:
 				<a href="http://www.w3.org/TR/cors/">
