--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
 		<h1>Overview</h1>
 		</section>
 
+		<section class="slide">
+		<h1>BDD and best intentions</h1>
+		<ul>
+		  <li>Requires a protagonist to make use of BDD in the first place</li>
+		  <li>Intention was to provide a specification starting point to iterate from
+		    <blockquote>figuring out what the hell you are supposed to be building in the first place – I think that’s half the benefit</blockquote>
+		  </li>
+		  <li>Stakeholders: Tom(s) from UX, Leo (PM) and developers (Kenny and Claudio)</li>
+		  <li>No BA - is that bad?</li>
+		</ul>
+		</section>
 
 		<section class="slide">
 		<h1>Technical Architecture</h1>
