--- a/index.html
+++ b/index.html
@@ -56,9 +56,40 @@
 		  <li>Requires a protagonist to make use of BDD in the first place</li>
 		  <li>Intention was to provide a specification starting point to iterate from
 		    <blockquote>figuring out what the hell you are supposed to be building in the first place – I think that’s half the benefit</blockquote>
+		    (Matt Wynne, co-author of the Cucumber book<br/>
+		    <a href="http://rubysource.com/matt-wynne-on-using-cucumber/">http://rubysource.com/matt-wynne-on-using-cucumber/</a>)
 		  </li>
-		  <li>Stakeholders: Tom(s) from UX, Leo (PM) and developers (Kenny and Claudio)</li>
 		  <li>No BA - is that bad?</li>
+		  <li>Stakeholders: Tom(s) from UX, Leo (PM) and developers (Kenny and Claudio)</li>
+		</ul>
+		</section>
+
+		<section class="slide">
+		<h1>Relish</h1>
+		<iframe src="https://www.relishapp.com/bbc-knowlearn/history-embedded-timeline/docs/?token=xIfwm1VSMWomykv288EV"></iframe>
+		</section>
+
+		<section class="slide">
+		<h1>Relish or Confluence?</h1>
+		<h2>Relish pros</h2>
+		<ul>
+		  <li>Generated from source Gherkin == the truth</li>
+		  <li>No ambiguity as not separately maintained</li>
+		  <li>Nicely formatted == readable</li>
+		</ul>
+		<h2>Relish cons</h2>
+		<ul>
+		  <li>Relish is a third party site</li>
+		  <li>Requires relishapp command line tool (and a developer to drive it)</li>
+		</ul>
+		</section>
+
+		<section class="slide">
+		<h1>The role of UX - waterfall?</h1>
+		<h2>We ended up implementing the design of the Flash user-testing prototype down to the last pixel</h2>
+		<ul>
+		  <li>Is that the way we want to work?</li>
+		  <li>Could we collaborate / iterate through feedback better?</li>
 		</ul>
 		</section>
 
@@ -87,11 +118,6 @@
 			</script>
 
 		</div>
-		</section>
-
-		<section class="slide">
-		<h1>Relish</h1>
-		<iframe src="https://www.relishapp.com/bbc-knowlearn/history-embedded-timeline/docs/?token=xIfwm1VSMWomykv288EV"></iframe>
 		</section>
 
 		<section class="slide">
