--- a/index.html
+++ b/index.html
@@ -71,23 +71,36 @@
 
 		<section class="slide">
 		<h1>Relish or Confluence?</h1>
-		<h2>Relish pros</h2>
-		<ul>
+		<h2>Relish</h2>
+		<ul class="no-top-offset">
 		  <li>Generated from source Gherkin == the truth</li>
 		  <li>No ambiguity as not separately maintained</li>
 		  <li>Nicely formatted == readable</li>
-		</ul>
-		<h2>Relish cons</h2>
-		<ul>
 		  <li>Relish is a third party site</li>
 		  <li>Requires relishapp command line tool (and a developer to drive it)</li>
+		</ul>
+		<h2>Confluence</h2>
+		<ul class="no-top-offset">
+		  <li>Allows wider stakeholder group to edit the feature scenarios</li>
+		  <li>Is that a good thing? Should someone 'own' the scenarios?</li>
 		</ul>
 		</section>
 
 		<section class="slide">
 		<h1>The role of UX - waterfall?</h1>
-		<h2>We ended up implementing the design of the Flash user-testing prototype down to the last pixel</h2>
 		<ul>
+		  <li>We have a production app that came out of a prototype to validate the concept - is that bad?
+		    <div id="flashtimeline">
+			<div id="flashcontent"><embed type="application/x-shockwave-flash" src="local_resources/new_scrub_08.swf" width="624" height="362" id="mymovie" name="mymovie" bgcolor="#ffffff" quality="high" menu="false"></div>
+			<script type="text/javascript">
+				var so = new SWFObject("local_resources/new_scrub_08.swf", "mymovie", "624", "362", "10", "#ffffff");
+				so.write("flashcontent");
+				so.addParam("menu", "false");
+				so.write("flashcontent");
+			</script>
+
+		    </div>
+		  </li>
 		  <li>Is that the way we want to work?</li>
 		  <li>Could we collaborate / iterate through feedback better?</li>
 		</ul>
