fixed broken interstitial
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938596 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -311,6 +311,10 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		<!-- The PAL Application -->
 		<section class="slide insterstitial">
 		<h1>The PAL App</h1>
+		</section>
+
+		<section class="slide">
+		<h1>PAL Components</h1>
 		<ul>
 		    <li>Forge</li>
 		    <li>BBC Module</li>
@@ -322,7 +326,7 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		    <li></li>
 		</ul>
 		</section>
-		
+	
 		<section class="slide">
 		<h1>The PAL App Structure</h1>
 	    <iframe src="local_resources/phpdocs/index.html"></iframe>
