Expanded PAL components slide.
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938669 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -344,16 +344,14 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		</section>
 
 		<section class="slide">
-		<h1>PAL Components</h1>
+		<h1>Our aims were (and are):</h1>
 		<ul>
-		    <li>Forge</li>
-		    <li>BBC Module</li>
-		    <li>Spectrum</li>
-		</ul>
-		
-		<h2>Our aims were:</h2>
-		<ul>
-		    <li></li>
+		    <li>Keep it simple</li>
+		    <li>Make a decoupled application</li>
+		    <li>Data source can be swapped out</li>
+		    <li>Can be easily switched into a shared module (BBC Module)</li>
+		    <li>Data source parser can be made into an interface with multiple implementations</li>
+		    <li>A new implementation can be an RDF/XML parser</li>
 		</ul>
 		</section>
 	
