changed reference to timeline 2.0 to timeline widget phase 2
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938681 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 			<li>Parses the DOM for CSS selectors & creates data model</li>
 			<li>Has an internal representation of state not held in the DOM</li>
 			<li>Generates a view based on Mustache templates </li>
-			<li>Built for flexibility so that Timeline 2.0 <del>can be</del> could have been built quickly!</li>
+			<li>Built for flexibility so that Timeline Widget Phase 2 could have been built quickly</li>
 		</ul>
 		</section>
 
