adding end page
git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@938710 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ public function testLoadJsonThrowsExceptionWhenResponseIs404() {
 		</section>
 		
 		<section class="slide wider">
-			<h1>TDD Approach</h1>
+		<h1>TDD Approach</h1>
 	        <h2>Benefits:</h2>
 	        <ul class="no-top-offset">
 	            <li>Allows for a short feedback loop</li>
@@ -502,6 +502,11 @@ dragend: function(){
 			<p><a href="https://confluence.dev.bbc.co.uk/display/frameworks/Sharing+PAL+Content+with+News+Stack">https://confluence.dev.bbc.co.uk/display/frameworks/Sharing+PAL+Content+with+News+Stack</a></p>
 
 		</div>
+		</section>
+
+
+		<section class="slide insterstitial">
+		<h1>The End</h1>
 		</section>
 		<!-- End slides. -->
 
