--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<ul>
 		  <li>Requires a protagonist to make use of BDD in the first place</li>
 		  <li>Intention was to provide a specification starting point to iterate from
-		    <blockquote>figuring out what the hell you are supposed to be building in the first place – I think that’s half the benefit</blockquote>
+		    <blockquote class="fullwidth">figuring out what the hell you are supposed to be building in the first place – I think that’s half the benefit</blockquote>
 		    (Matt Wynne, co-author of the Cucumber book<br/>
 		    <a href="http://rubysource.com/matt-wynne-on-using-cucumber/">http://rubysource.com/matt-wynne-on-using-cucumber/</a>)
 		  </li>
