git-svn-id: https://repo.dev.bbc.co.uk/playground/kennyr04/timelines_deck@939107 6500d436-0a25-4ea1-a8e6-63f9231d3e1c

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		-->
 		</section>
 		
-		<article class="slide" class="logging">
+		<article class="slide wider logging">
 		    <h1>Logging strategy</h1>		    
 		    <section>		        
 		        <h2>What we log</h2>
@@ -488,14 +488,8 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		    </section>
 		    
 		    <section>
-		    
-		    <pre class="prettyprint">
-		    <code class="language-php">
-		    Error parsing json file, expected an array of events in 
-		    /data/webapps/bbc.co.uk/kltimeline/webapp/php/modules/kltimeline/models/Parser.php 
-		    on line 125 while serving /kltimeline/battle_of_britain/use_barlesque
-		    </code>
-		    </pre>
+		    <h2>Typical error log message</h2>		    
+		    <pre class="prettyprint no-top-offset" style="line-height: 200%;">Error parsing json file, expected an array of events in /data/webapps/bbc.co.uk/kltimeline/webapp/php/modules/kltimeline/models/Parser.php on line 125 while serving /kltimeline/battle_of_britain/use_barlesque</pre>
 		    </section>
 		</article>
 		
