updated for off reith access

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
 		<section class="slide wider">
 		<h1>Embedded Timeline</h1>
-		<iframe src="http://www.test.newsonline.tc.nca.bbc.co.uk/history/0/16435733"></iframe>
+		<div class="image-cradle">
+			<img src="local_resources/news_timeline.png" width="800"/>	
+		</div>
 		</section>
 		
 		<!-- Quick Overview -->
@@ -401,7 +403,10 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 	
 		<section class="slide">
 		<h1>The PAL App Documentation</h1>
-	    	<iframe src="local_resources/phpdocs/index.html"></iframe>
+		<div class="image-cradle">
+			<img src="local_resources/generated_docs.png" width="800"/>	
+		</div>
+	
 		</section>
 
 		<!-- The PAL Application -->
@@ -459,18 +464,10 @@ rake sandbox:focus:features  # Run Cukes tagged @now against Sandbox
 		
 		<section class="slide">
 		<h1>Zenoss Monitoring</h2>
-		<iframe src="https://monitor.forge.bbc.co.uk/zport/dmd/Reports/Multi-Graph%20Reports/BBC%20Applications/kltimeline/kltimeline_Int#graph_3:True;"></iframe>
-		<!--
 			<div class="image-cradle">
-				<h2>Zenoss</h2>
 				<img src="local_resources/zenoss.png" width="800"/>	
 			</div>
-			<ul style="top: 20px;">
-				<li>Thing that we are monitoring in Zenoss</li>
-				<li>...</li>
-			</ul>
 		</div>
-		-->
 		</section>
 		
 		<article class="slide wider logging">
