updated final page to have goo.gl link to github repo

--- a/index.html
+++ b/index.html
@@ -558,6 +558,11 @@ dragend: function(){
 		<section class="slide interstitial">
 		<h1>The End</h1>
 		</section>
+
+		<section class="slide interstitial">
+		<h1>http://goo.gl/zYBVt</h1>
+		</section>
+	
 		<!-- End slides. -->
 
 		<!-- Begin extension snippets. Add or remove as needed. -->
